--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <meta content="#000000" name="theme-color"/>
   <meta name="Pocket dashboard"/>
-  <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
+  <link href="%PUBLIC_URL%/logo.png" rel="apple-touch-icon"/>
   <!--
     manifest.json provides metadata used when your web app is installed on a
     user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
