--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
   <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <meta content="#000000" name="theme-color"/>
-  <meta name="Pocket dashboard"/>
+  <meta name="Pocket Dashboard"/>
   <link href="%PUBLIC_URL%/logo.png" rel="apple-touch-icon"/>
   <!--
     manifest.json provides metadata used when your web app is installed on a
@@ -22,6 +22,8 @@
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
   <title>Pocket Dashboard</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170464047-3"></script> 
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-170464047-3'); </script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
